@@ -1,14 +1,16 @@
 package com.ya3k.checklist.controlleradvice;
 
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
+
 import java.time.format.DateTimeParseException;
 import java.util.*;
-import java.util.stream.Collectors;
 
+@Slf4j
 @RestControllerAdvice
 public class ApplicationExceptionHandler {
 
@@ -29,25 +31,23 @@ public class ApplicationExceptionHandler {
                     errorMap.put("message", fieldError.getDefaultMessage());  // Key "message" for error message
                     return errorMap;
                 })
-                .collect(Collectors.toList());  // Collect error maps into a list
+                .toList();  // Collect error maps into a list
 
         // Add the error list to the errors map with a specific key ("invalid_input")
         errors.put("invalid_input", errorList);
-
+        log.error("Validation error: {}", errors);
         return errors;  // Return the errors map with categorized error lists
     }
 
-   //   Exception handler for handling DateTimeFormat parsing errors
+    //   Exception handler for handling DateTimeFormat parsing errors
     @ExceptionHandler(DateTimeParseException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     public Map<String, String> handleDateTimeFormatException(DateTimeParseException e) {
         Map<String, String> error = new HashMap<>();
         error.put("message", "Invalid date format for endTime, please use yyyy-MM-dd format.");
+        log.error("DateTimeParseException: {}", e.getMessage());
         return error;
     }
-
-
-
 
 
 }
